2015-09-17 Siddharth Ravikumar <sravik@bgsu.edu>

	* v0.1.0: initial version of combox

	Works on GNU/Linux and OS X.